--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="choice3">Choice3</string>
     <string name="choice4">Choice4</string>
     <string name="quiz">Quiz</string>
+    <string name="dictionary">Dictionary</string>
 </resources>
