--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="quiz">Quiz</string>
-    <string name="dictionary">Dictionary</string>
+    <string name="my_dictionary">My dictionary</string>
 
     <string name="choose_translation">Choose translation</string>
     <string name="write_translation">Write translation</string>
@@ -37,6 +37,7 @@
     <string name="maybe">Maybe</string>
     <string name="yes">Yes</string>
     <string name="is_it_right">Is it right?</string>
+    <string name="sort">sort</string>
 
 
 </resources>
