list edit fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,8 @@
     <string name="word_value_desc">word 🔺</string>
     <string name="words_count">Words: %d</string>
 
+    <string name="name_hint">Name…</string>
+    <string name="choose_hint">Choose…</string>
+    <string name="word_list">List</string>
 
 </resources>
