--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,6 @@
 
     <string name="should_have_at_least_3_letters">Should have at least 3 letters</string>
     <string name="should_have_at_least_1">Should have at least 1</string>
+    <string name="import_words">Import words</string>
 
 </resources>
